--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -58,6 +58,17 @@
             </p>
           </a>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" id="dropdown09" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            <span class="flag-icon flag-icon-us"> </span> {{selectedLanguage}}</a>
+          <div class="dropdown-menu" aria-labelledby="dropdown09">
+            <a class="dropdown-item" (click)="useLanguage('en', 'English')">
+              <span class="flag-icon flag-icon-fr"> </span> English</a>
+            <a class="dropdown-item" (click)="useLanguage('tg', 'తెలుగు')">
+              <span class="flag-icon flag-icon-it"> </span> తెలుగు</a>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
