--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,9 +16,9 @@
                                 [data]="tableData">
                             </app-md-table>
                           </div>
-                          <div class="col-md-6 ml-auto mr-auto">
+                          <!-- <div class="col-md-6 ml-auto mr-auto">
                               <div id="worldMap" class="map"></div>
-                          </div>
+                          </div> -->
                       </div>
                   </div>
               </div>
@@ -42,7 +42,7 @@
                   <i class="material-icons">edit</i>
                 </button>
               </div>
-              <h4 class="card-title">Website Views</h4>
+              <h4 class="card-title">Total Schools</h4>
               <p class="card-category">Last Campaign Performance</p>
             </div>
             <div class="card-footer">
@@ -69,7 +69,7 @@
                   <i class="material-icons">edit</i>
                 </button>
               </div>
-              <h4 class="card-title">Daily Sales</h4>
+              <h4 class="card-title">Total Students</h4>
               <p class="card-category">
                 <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p>
             </div>
